Fixed horizontal scrolling in unusually thin screens

--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,7 @@ html {
   scrollbar-width: auto; /* Scrollbar width */
   scrollbar-color: #ffbf10 #f3f8f200; /* Thumb and track colors */
 }
+
+body {
+    overflow-x: hidden;
+}
